--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,12 +1,13 @@
 /* Base styles for larger screens */
 .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 100px;
-  margin-bottom: 100px;
-  margin-left: 120px;
-  margin-right: 120px;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  width: 100%;
+  margin-top: 70px !important;
+  margin-left: auto; /* Center horizontally */
+  margin-right: auto; /* Center horizontally */
+  max-width: 1200px; /* Adjust max-width as needed */
 }
 
 .item {
@@ -20,8 +21,7 @@
   line-height: 1;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  margin-bottom: 15px;
-  margin-top: 140px;
+  margin: 60px 0 15px;
   display: grid;
 }
 
@@ -29,7 +29,6 @@
   width: 100%;
   height: auto;
   object-fit: contain;
-  /* animation: move 3s infinite ease alternate; */
 }
 
 .desc {
@@ -43,21 +42,35 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
-  padding: 10px 12px;
+  padding: 10px 20px;
   background-color: #14279b;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: opacity 0.3s;
+  transition: opacity 0.3s, background-color 0.3s;
 }
 
 .scrollToTopButton:hover {
   background-color: #005bb5;
 }
 
-.scrollToTopButton:focus {
-  outline: none;
+.scrollToTopButton::before,
+.scrollToTopButton::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  transition: transform 0.3s;
+}
+
+.scrollToTopButton:hover::before {
+  transform: scaleX(1);
+}
+
+.scrollToTopButton:hover::after {
+  transform: scaleY(1);
 }
 
 /* Media queries for responsive adjustments */
@@ -86,12 +99,6 @@
   .img {
     height: 300px; /* Adjust image height */
   }
-
-  .scrollToTopButton {
-    bottom: 10px;
-    right: 10px;
-    padding: 8px 16px;
-  }
 }
 
 /* Small devices (landscape phones, less than 768px) */
@@ -115,13 +122,7 @@
   }
 
   .img {
-    height: 400px; /* Adjust image height */
-  }
-
-  .scrollToTopButton {
-    bottom: 15px;
-    right: 15px;
-    padding: 10px 20px;
+    height: 600px; /* Adjust image height */
   }
 }
 
@@ -148,12 +149,6 @@
   .img {
     height: 450px; /* Adjust image height */
   }
-
-  .scrollToTopButton {
-    bottom: 20px;
-    right: 20px;
-    padding: 12px 24px;
-  }
 }
 
 /* Large devices (desktops, less than 1200px) */
@@ -178,17 +173,13 @@
   .img {
     height: 500px; /* Default image height */
   }
-
-  .scrollToTopButton {
-    bottom: 25px;
-    right: 25px;
-    padding: 14px 28px;
-  }
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-  /* No changes needed beyond large devices */
+  .img {
+    height: 70vh; /* Adjust image height for large desktops */
+  }
 }
 
 /* Tablets in landscape (768px to 1024px) */
@@ -211,13 +202,7 @@
   }
 
   .img {
-    height: 400px; /* Adjust image height */
-  }
-
-  .scrollToTopButton {
-    bottom: 25px;
-    right: 25px;
-    padding: 12px 24px;
+    height: 600px; /* Adjust image height */
   }
 }
 
