--- a/src/components/About/about.module.css
+++ b/src/components/About/about.module.css
@@ -1,3 +1,5 @@
+/* about.module.css */
+
 .container {
   padding: 20px 20px;
   display: flex;
@@ -64,7 +66,7 @@
   font-size: 16px;
   line-height: 1.5;
   margin-bottom: 10px;
-  animation: fadeInUp 3s ease-in-out;
+  animation: fadeInUp 1s ease-in-out;
   text-align: left;
 }
 
@@ -85,31 +87,11 @@
   color: white;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
-  animation: fadeInUp 3s ease-in-out;
+  animation: fadeInUp 1s ease-in-out;
 }
 
 .button:hover {
   background-color: #0056b3;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
 }
 
 .extraContainer {
@@ -211,10 +193,6 @@
     padding: 20px 80px;
   }
 
-  .title {
-    font-size: 3em;
-  }
-
   .icon {
     font-size: 4rem;
   }
@@ -238,5 +216,25 @@
 
   .desc {
     text-align: center;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
