--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,8 +1,6 @@
-/* Base styles */
 .footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  display: flex !important;
+  justify-content: space-evenly !important;
   background: #fff;
   box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
   padding: 30px 0;
@@ -10,6 +8,15 @@
   font-size: 14px;
   height: 90px;
   margin-top: 60px;
+}
+
+.footer .container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1320px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer p {
@@ -24,10 +31,11 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .footer nav ul li {
-  display: inline;
   margin-right: 20px;
 }
 
@@ -38,18 +46,19 @@
 .footer nav ul li a {
   text-decoration: none;
   color: #14279b;
-  transition: color 0.3s ease-in-out; /* Added transition for smooth effect */
+  font-size: 15px;
+  transition: color 0.3s ease-in-out;
 }
 
 .footer nav ul li a:hover {
-  color: #14729b; /* Hover effect */
+  color: #14729b;
 }
 
 /* Media Queries */
 
 /* Extra small devices (phones, 576px and below) */
 @media (max-width: 576px) {
-  .footer {
+  .footer .container {
     flex-direction: column;
     padding: 15px;
     text-align: center;
@@ -59,36 +68,43 @@
     margin-bottom: 10px;
   }
 
+  .footer nav ul {
+    flex-direction: column;
+  }
+
   .footer nav ul li {
-    display: block;
     margin-bottom: 10px;
+  }
+
+  .footer nav ul li:last-child {
+    margin-bottom: 0;
   }
 }
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 577px) and (max-width: 767px) {
-  .footer {
+  .footer .container {
     padding: 15px 20px;
   }
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991px) {
-  .footer {
+  .footer .container {
     padding: 20px 30px;
   }
 }
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199px) {
-  .footer {
+  .footer .container {
     padding: 20px 50px;
   }
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-  .footer {
+  .footer .container {
     padding: 20px 90px;
   }
 }
