--- a/src/components/ourprocess/ourprocess.module.css
+++ b/src/components/ourprocess/ourprocess.module.css
@@ -20,7 +20,7 @@
 
 .container {
   padding: 5px;
-  animation: fadeIn 1s ease-out forwards;
+  animation: fadeIn 1s ease-out forwards; /* Initial fadeIn animation duration */
   max-width: 1200px;
   margin: 0 auto;
   font-family: Arial, sans-serif;
@@ -59,9 +59,9 @@
 .intro {
   font-size: 1.2em;
   color: #555;
-  animation: fadeIn 1s ease-out 0.5s forwards;
+  animation: fadeIn 1s ease-out 0.5s forwards; /* Intro fadeIn animation duration */
   text-align: center;
-  margin: 15px 0px 0px 0px;
+  margin: 15px 0 0 0;
 }
 
 .processList {
@@ -81,7 +81,6 @@
   border-radius: 5px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   transition: 0.3s;
-  transition: ease-in-out 0.4s;
   gap: 10px;
   margin-top: 150px;
 }
@@ -114,19 +113,19 @@
 
 /* Animation delays for cards */
 .card:nth-child(1) {
-  animation-delay: 0.3s;
+  animation: fadeInUp 0.6s ease-out 0.3s forwards; /* Adjusted animation duration */
 }
 
 .card:nth-child(2) {
-  animation-delay: 0.5s;
+  animation: fadeInUp 0.6s ease-out 0.5s forwards; /* Adjusted animation duration */
 }
 
 .card:nth-child(3) {
-  animation-delay: 0.7s;
+  animation: fadeInUp 0.6s ease-out 0.7s forwards; /* Adjusted animation duration */
 }
 
 .card:nth-child(4) {
-  animation-delay: 0.9s;
+  animation: fadeInUp 0.6s ease-out 0.9s forwards; /* Adjusted animation duration */
 }
 
 /* Media Queries */
