--- a/src/components/service/service.module.css
+++ b/src/components/service/service.module.css
@@ -1,3 +1,4 @@
+/* Base styles */
 .container {
   padding: 60px 0px;
   animation: fadeIn 1s ease-out forwards;
@@ -75,6 +76,7 @@
   border-radius: 8px;
   z-index: 1;
   animation: fadeInUp 1s ease-out forwards;
+  background-color: #fff;
 }
 
 .card::before {
@@ -92,12 +94,30 @@
   border-radius: 8px;
 }
 
+.card::after {
+  content: "";
+  position: absolute;
+  background: #e1f0fa;
+  right: -60px;
+  top: -40px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  transition: all 0.3s;
+  z-index: -1;
+}
+
 .card:hover::before {
   transform: scaleX(1) scaleY(1);
   border-radius: 8px;
 }
 
+.card:hover::after {
+  background: #14279b;
+}
+
 .card:hover {
+  background-color: #14279b;
   color: #fff;
 }
 
