--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -3,11 +3,10 @@
   justify-content: space-evenly !important;
   background: #fff;
   box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
-  padding: 30px 0;
   color: #222222;
   font-size: 14px;
-  height: 90px;
   margin-top: 60px;
+  padding: 20px;
 }
 
 .footer .container {
